# MCP_Financial_Forecasting

./: README.md  example_usage.py  pyproject.toml  requirements.txt  setup_and_test.py
src/financial_forecasting_mcp/: __init__.py  data_fetcher.py  feature_engineering.py  openai_interpreter.py  server.py  svm_forecaster.py
src/financial_forecasting_mcp.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
